syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


option go_package = "github.com/Mobo140/microservices/chat-server/pkg/chat_v1;chat_v1";


service ChatV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Get(GetRequest)       returns(GetResponse);
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

enum Role {
    USER = 0;
    ADMIN = 1;
}

message ChatInfo {
    repeated string usernames = 1;
}

message Chat {
    int64 id = 1;
}

message CreateRequest {
    ChatInfo info = 1;
}

message CreateResponse {
    int64 id = 1;
}

message GetRequest {
    int64 id = 1;
}

message GetResponse {
    ChatInfo info = 1;
}

message SendMessageRequest {
    string form = 1;
    string text = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message DeleteRequest {
    int64 id = 1;
}